feat: Add log-likelihood instance

--- a/Logistic_regression.ipynb
+++ b/Logistic_regression.ipynb
@@ -38,15 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "class logistic_regression:\n",
-    "    def __init__(self, solver = 'lbfgs', penalty = 'l2', C = 1.,):\n",
+    "    def __init__(self, solver = 'lbfgs', penalty = 'l2', C = 1., tol = 1e-8, max_iter=100):\n",
     "        self.solver = solver\n",
     "        self.penalty = penalty\n",
     "        self.C = C\n",
+    "        self.tol = tol\n",
+    "        self.max_iter = max_iter\n",
     "\n",
     "    def _sigmoid(self, beta, data):\n",
     "        return 1/(1+np.exp(-data.dot(beta)))\n",
@@ -54,14 +56,14 @@
     "    def _llf_none(self, beta, data, label, ):\n",
     "        target = np.array([-1 if i ==0 else 1 for i in label.values])\n",
     "        value = sum( np.log( 1/( 1+np.exp(-(target*(data.dot(beta)))) ) ) )\n",
-    "        return -(self.C * value)\n",
+    "        return -value\n",
     "    \n",
     "    def _llf_l2(self, beta, data, label, ):\n",
     "        target = np.array([-1 if i ==0 else 1 for i in label.values])\n",
     "        value = sum( np.log( 1/( 1+np.exp(-(target*(data.dot(beta)))) ) ) )\n",
     "        return -(self.C * value) + beta.dot(beta)/2\n",
     "\n",
-    "    def _irls(self, data, label, w_init, penalty, C, cost_cutoff=1., max_iter = 100):\n",
+    "    def _irls(self, data, label, w_init, penalty, C, cnvg_tol, max_iter):\n",
     "        x = data.copy()\n",
     "        w = w_init.copy()\n",
     "        mu = 1/(1+np.exp(-x.dot(w)))\n",
@@ -74,9 +76,9 @@
     "            w_0 = w\n",
     "            w = np.linalg.inv( (x.T).dot(s.dot(x)) ).dot(x.T).dot( s.dot(x.dot(w)) + label.values - mu )\n",
     "            if penalty == 'none':\n",
-    "                c = C*self._llf_none(w, x, label)\n",
+    "                c = self._llf_none(w, x, label)\n",
     "            elif penalty == 'l2':\n",
-    "                c = C*self._llf_l2(w, x, label)\n",
+    "                c = self._llf_l2(w, x, label)\n",
     "            else:\n",
     "                raise ValueError(\"This penalty is not supported yet.\") from None\n",
     "\n",
@@ -85,13 +87,14 @@
     "                mu = 1/(1+np.exp(-x.dot(w)))\n",
     "                np.fill_diagonal(s, [i*(1-i) for i in mu])\n",
     "            else:\n",
-    "                if (c>cost)|(c!=c)|(c<cost_cutoff):\n",
+    "                if (c > cost)|(c!=c)|((cost - c) < cnvg_tol):\n",
     "                    w = w_0\n",
     "                    break\n",
     "                else:\n",
     "                    cost = c\n",
-    "                    mu =1/(1+np.exp(-x.dot(w)))\n",
+    "                    mu = 1/(1+np.exp(-x.dot(w)))\n",
     "                    np.fill_diagonal(s, [i*(1-i) for i in mu])\n",
+    "            \n",
     "        return w\n",
     "    \n",
     "    def fit(self, X, y):\n",
@@ -104,14 +107,20 @@
     "            if self.penalty == 'l2':\n",
     "                coef =  minimize(self._llf_l2, x0 = self.coef_, args = (X_, y), method = 'L-BFGS-B', )['x'] #options={'gtol': 1e-3, 'disp': True}\n",
     "                self.coef_ = coef.copy()\n",
+    "                self.log_likelihood = -self._llf_l2(coef, X_, y)\n",
     "            elif self.penalty == 'none':\n",
     "                coef =  minimize(self._llf_none, x0 = self.coef_, args = (X_, y), method = 'L-BFGS-B', )['x']\n",
     "                self.coef_ = coef.copy()\n",
+    "                self.log_likelihood = -self._llf_none(coef, X_, y)\n",
     "            else:\n",
     "                raise ValueError(\"Solver lbfgs supports only 'l2' or 'none' penalties\") from None\n",
     "        elif self.solver == 'irls':\n",
-    "            coef = self._irls(X_, y, self.coef_, self.penalty, self.C)\n",
+    "            coef = self._irls(X_, y, self.coef_, self.penalty, self.C, self.tol, self.max_iter)\n",
     "            self.coef_ = coef.copy()\n",
+    "            if self.penalty=='l2':\n",
+    "                self.log_likelihood = -self._llf_l2(coef, X_, y)\n",
+    "            else:\n",
+    "                self.log_likelihood = -self._llf_none(coef, X_, y)\n",
     "        else:\n",
     "            raise ValueError(\"This Solver is not supported.\") from None\n",
     "        \n",
@@ -120,6 +129,9 @@
     "        self.n_samples = n\n",
     "        self.n_features = p\n",
     "        \n",
+    "        #y_ = np.array([-1 if i==.0 else 1 for i in np.array(y)])\n",
+    "        self.deviance = -2*( ((X_.dot(self.coef_)).T).dot(y) - np.log(1+np.exp(X_.dot(self.coef_))).sum() )\n",
+    "        self.residuals = -2*( (X_.dot(self.coef_))*y - np.log(1+np.exp(X_.dot(self.coef_))) )\n",
     "        mu = self._sigmoid(self.coef_, X_)\n",
     "        S = np.zeros((X_.shape[0], X_.shape[0]))\n",
     "        np.fill_diagonal(S, [i*(1-i) for i in mu])\n",
@@ -161,8 +173,9 @@
     "            feat_idx = np.insert(feature_names, 0, '(INTCP)')\n",
     "            coef = pd.DataFrame(np.array([self.coef_, self.std_error, self.z_values, np.round(self.z_pvalues, round_decimals), ci_lower, ci_upper]).T, index = feat_idx, columns= \n",
     "                               ['coef.', 'std. error', 'z_value', 'Pr(>|z|)', '{}% LWR'.format(int(100*(1-alpha))), '{}% UPR'.format(int(100*(1-alpha)))])\n",
-    "        \n",
-    "        print(coef, sep='\\n'+'='*70+'\\n')"
+    "        dev = 'Deviance: {}'.format(self.deviance)\n",
+    "        llf = 'Log-likelihood: {}'.format(self.log_likelihood)\n",
+    "        print(dev, llf, coef, sep='\\n'+'='*70+'\\n')"
    ]
   },
   {
@@ -174,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,6 +214,88 @@
     "\n",
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statsmodels.api as sm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Generalized Linear Model Regression Results                  \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  label   No. Observations:                  455\n",
+      "Model:                            GLM   Df Residuals:                      448\n",
+      "Model Family:                Binomial   Df Model:                            6\n",
+      "Link Function:                  logit   Scale:                          1.0000\n",
+      "Method:                          IRLS   Log-Likelihood:                -89.286\n",
+      "Date:                Sun, 29 Aug 2021   Deviance:                       178.57\n",
+      "Time:                        03:28:15   Pearson chi2:                 1.48e+03\n",
+      "No. Iterations:                     7                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const         -1.2369      0.216     -5.728      0.000      -1.660      -0.814\n",
+      "x1             0.2696      0.288      0.935      0.350      -0.296       0.835\n",
+      "x2             0.2354      0.561      0.420      0.675      -0.864       1.335\n",
+      "x3             0.2167      0.495      0.438      0.662      -0.754       1.187\n",
+      "x4             4.4891      0.625      7.178      0.000       3.263       5.715\n",
+      "x5             0.7051      0.281      2.511      0.012       0.155       1.255\n",
+      "x6            -1.5538      0.443     -3.510      0.000      -2.422      -0.686\n",
+      "==============================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "Xs = sm.add_constant(X_train[:, -6:])\n",
+    "#logit = sm.Logit(y_train.values, Xs,)\n",
+    "logit = sm.GLM(y_train, Xs, family=sm.families.Binomial(), )\n",
+    "result = logit.fit()\n",
+    "print(result.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deviance: 178.57147746625196\n",
+      "======================================================================\n",
+      "Log-likelihood: -89.28573873312577\n",
+      "======================================================================\n",
+      "              coef.  std. error   z_value  Pr(>|z|)  95% LWR  95% UPR\n",
+      "x0(INTCP) -1.236908    0.215952 -5.727696     0.000   -1.660   -0.814\n",
+      "x1         0.269614    0.288392  0.934889     0.350   -0.296    0.835\n",
+      "x2         0.235429    0.561026  0.419640     0.675   -0.864    1.335\n",
+      "x3         0.216709    0.495205  0.437615     0.662   -0.754    1.187\n",
+      "x4         4.489082    0.625409  7.177829     0.000    3.263    5.715\n",
+      "x5         0.705100    0.280765  2.511349     0.012    0.155    1.255\n",
+      "x6        -1.553841    0.442719 -3.509767     0.000   -2.422   -0.686\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = logistic_regression(solver = 'irls', penalty='none', C=1.)\n",
+    "lr.fit(X_train[:, -6:], y_train)\n",
+    "\n",
+    "lr.summary()"
    ]
   },
   {
@@ -212,19 +307,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9736842105263158\n"
+      "0.9385964912280702\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ywkim\\AppData\\Roaming\\Python\\Python38\\site-packages\\sklearn\\linear_model\\_logistic.py:1322: UserWarning: Setting penalty='none' will ignore the C and l1_ratio parameters\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "model = LogisticRegression(penalty='l2', C=1.2)\n",
+    "model = LogisticRegression(penalty='none', C=1.2)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
     "pred = model.predict(X_test)\n",
@@ -235,25 +338,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9736842105263158\n"
+      "0.9385964912280702\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-4-e5b379cbb00a>:8: RuntimeWarning: overflow encountered in exp\n",
+      "  return 1/(1+np.exp(-data.dot(beta)))\n",
+      "<ipython-input-4-e5b379cbb00a>:84: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  self.std_error = np.sqrt(np.diag( covar ))\n"
      ]
     }
    ],
    "source": [
-    "lr = logistic_regression(solver = 'irls', penalty='l2', C=1.)\n",
+    "lr = logistic_regression(solver = 'lbfgs', penalty='none', C=1.)\n",
     "lr.fit(X_train, y_train)\n",
     "\n",
     "pred_ = lr.predict(X_test)\n",
     "pred_proba_ = lr.predict_proba(X_test)\n",
     "\n",
-    "print(model.score(X_test, y_test))"
+    "print(lr.score(X_test, y_test))"
    ]
   },
   {
