docs: Add description

--- a/Logistic_regression.ipynb
+++ b/Logistic_regression.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -31,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,14 +228,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train"
+    "# Validation for the result of my implementation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## irls"
+    "## Solver: irls"
    ]
   },
   {
@@ -312,12 +319,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## l-bfgs"
+    "## Solver: l-bfgs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -373,8 +380,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* MAE for predicted probabilities"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +397,7 @@
        "0.0009100549773208128"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
