docs: Remove redundant cells and Use gram-schmidt module

--- a/SVD_implementation.ipynb
+++ b/SVD_implementation.ipynb
@@ -34,107 +34,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Gram_schmidt process\n",
-    "\n",
-    "$\\large \\displaystyle \\mathrm{V} = \\begin{pmatrix} \\mathbf{v}_1 &\\mathbf{v}_2 & \\cdots & \\mathbf{v}_p \\end{pmatrix}$\n",
-    ", where  $\\mathbf{v}_i$ for $i \\in \\{1,2,\\dots,p\\}$ are column vectors.\n",
-    "\n",
-    "$\\large \\begin{align}  \\mathbf{u}_1 &= \\mathbf{v}_1 \\\\ \\mathbf{u}_2 &= \\mathbf{v}_2 - \\frac{\\left\\langle \\mathbf{u}_1, \\mathbf{v}_2 \\right\\rangle}{\\left\\langle \\mathbf{u}_1, \\mathbf{u}_1 \\right\\rangle} \\mathbf{u}_1\\\\ \\mathbf{u}_3 &= \\mathbf{v}_3- \\frac{\\left\\langle \\mathbf{u}_2, \\mathbf{v}_3 \\right\\rangle}{\\left\\langle \\mathbf{u}_2, \\mathbf{u}_2\\right\\rangle} \\mathbf{u}_2 - \\frac{\\left\\langle \\mathbf{u}_1, \\mathbf{v}_3 \\right\\rangle}{\\left\\langle \\mathbf{u}_1, \\mathbf{u}_1\\right\\rangle} \\mathbf{u}_1\\\\ &\\ \\vdots \\nonumber \\\\\\mathbf{u}_p &= \\mathbf{v}_p - \\sum^{p-1}_{i=1} \\frac{\\langle \\mathbf{u}_i, \\mathbf{v}_p \\rangle}{\\left\\langle \\mathbf{u}_i, \\mathbf{u}_i\\right\\rangle} \\mathbf{u}_i\\\\\n",
-    "\\end{align} $\n",
-    "\n",
-    "The orthogonal column vectors matrix is\n",
-    "\n",
-    "$\\large \\therefore \\mathrm{U} = \\begin{pmatrix} \\mathbf{u}_1 & \\mathbf{u}_2 &\\cdots & \\mathbf{u}_p \\end{pmatrix}$"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class gram_schmidt:\n",
-    "    '''def __init__(self, X):\n",
-    "        self.X = X.astype(float)'''\n",
-    "        \n",
-    "    def _proj(self, u, v):\n",
-    "        return (np.vdot(v, u) / np.vdot(u,u))*u\n",
-    "    \n",
-    "    def fit_transform(self, X, col_vec = True, normal = True):\n",
-    "        #X = X.astype(float)\n",
-    "        if col_vec:\n",
-    "            mat = X.copy()\n",
-    "        else:\n",
-    "            mat = (X.T).copy()\n",
-    "        \n",
-    "        N = mat.shape[1]\n",
-    "        mat_orth = np.array([]).reshape(mat.shape[0], -1)\n",
-    "        for n in range(N):\n",
-    "            u = mat[:, n:n+1].copy()\n",
-    "            if n ==0:\n",
-    "                mat_orth = np.hstack((mat_orth,u))\n",
-    "            else:\n",
-    "                for i in range(n):\n",
-    "                    u -= self._proj(mat_orth[:, i:i+1], mat[:, n:n+1])\n",
-    "                mat_orth = np.hstack((mat_orth,u))\n",
-    "        \n",
-    "        if normal:\n",
-    "            result = mat_orth / np.linalg.norm(mat_orth, axis=0)\n",
-    "            if col_vec:\n",
-    "                return result\n",
-    "            else:\n",
-    "                return result.T\n",
-    "        else:\n",
-    "            if col_vec:\n",
-    "                return mat_orth\n",
-    "            else:\n",
-    "                return mat_orth.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 263,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''def svd(data, reduced='thin'):\n",
-    "    dim = data.shape[1]\n",
-    "    rank = np.linalg.matrix_rank(data)\n",
-    "    relu = np.vectorize(lambda x: np.real(x) if np.real(x)>=0 else .0)\n",
-    "    \n",
-    "    eval_u, evec_u = np.linalg.eig(data.dot(data.T), )\n",
-    "    eval_v, evec_v = np.linalg.eig(data.T.dot(data), )\n",
-    "    \n",
-    "    gs = gram_schmidt()\n",
-    "    evec_u_gs = gs.fit_transform(evec_u)\n",
-    "    evec_v_gs = gs.fit_transform(evec_v)\n",
-    "    print(np.linalg.det(evec_u))\n",
-    "    print(np.linalg.det(evec_u_gs))\n",
-    "    \n",
-    "    \n",
-    "    s = eval_v.copy()\n",
-    "    s = np.sqrt(relu(s))\n",
-    "    s1 = np.sort(s)[::-1]\n",
-    "    if dim > rank:\n",
-    "        s1[-(dim-rank):] = 0\n",
-    "    \n",
-    "    u_idx = np.sqrt(relu(np.real(eval_u))).argsort()[-dim:][::-1]\n",
-    "    if reduced=='thin':\n",
-    "        u = evec_u_gs[:, u_idx ]\n",
-    "        S = np.eye(dim)\n",
-    "        S *= s1     \n",
-    "    else:        \n",
-    "        u = np.hstack((evec_u_gs[:, u_idx ], np.delete(evec_u_gs, u_idx, axis=1)))\n",
-    "        S = np.zeros(data.shape)\n",
-    "        np.fill_diagonal(S, s1)\n",
-    "    \n",
-    "    v_idx = np.sqrt(relu(np.real(eval_v))).argsort()[-dim:][::-1]\n",
-    "    v = evec_v_gs[:, v_idx ]\n",
-    "    \n",
-    "    return u, S, s, v'''"
+    "from packages.GramSchmidt import gram_schmidt"
    ]
   },
   {
@@ -252,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +166,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +333,7 @@
        "True"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +353,7 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
