feat: Add implementation of tree using treelib

--- a/Representing_decision_tree.ipynb
+++ b/Representing_decision_tree.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "from treelib import Tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,6 +79,7 @@
     "            print('Depth', dep)\n",
     "            nodes = np.where(node_depth==dep)[0]\n",
     "            child_parent = sorted((zip(nodes, [parent_node[i] for i in nodes])), key = lambda x: (x[1],x[0]) )\n",
+    "            #print(child_parent)\n",
     "            nodes1 = [i[0] for i in child_parent]\n",
     "            for node in nodes1:\n",
     "                if feat_in_node[node] == -2:\n",
@@ -86,7 +88,38 @@
     "                else:\n",
     "                    print('node #{}'.format(node), feat_names[feat_in_node[node]], '<=', round(threshold[node], round_digit), model_dt.criterion, '=', round(impurity[node], round_digit), \n",
     "                          'samples =', samples[node], 'value =', round(values[node], round_digit), 'parent_node =', parent_node[node], end=' || ')\n",
-    "            print('\\n')  \n",
+    "            print('\\n')\n",
+    "            \n",
+    "    def print_tree_(self, round_digit = 3, feat_names=None):\n",
+    "        max_depth = self.model.tree_.max_depth\n",
+    "        parent_node = self._parent()\n",
+    "        node_depth = self._depth()\n",
+    "        n_feats = self.model.n_features_\n",
+    "        if feat_names is None:\n",
+    "            feat_names = list('F{}'.format(str(i).zfill(len(str(n_feats)))) for i in range(n_feats))\n",
+    "        feat_in_node = self.model.tree_.feature\n",
+    "        threshold = self.model.tree_.threshold\n",
+    "        impurity = self.model.tree_.impurity\n",
+    "        samples = self.model.tree_.n_node_samples\n",
+    "        values = self.model.tree_.value.flatten()\n",
+    "        \n",
+    "        tree = Tree()\n",
+    "        \n",
+    "        for node in range(self.n_nodes):\n",
+    "            \n",
+    "            if node == 0:\n",
+    "                node_list = ['node #{}'.format(node), feat_names[feat_in_node[node]], '<=', round(threshold[node], round_digit), model_dt.criterion, '=', \n",
+    "                             round(impurity[node], round_digit), 'samples =', samples[node], 'value =', round(values[node], round_digit),]\n",
+    "                tree.create_node(' '.join([str(i) for i in node_list]), node)\n",
+    "            elif feat_in_node[node] == -2:\n",
+    "                node_list = ['node #{}'.format(node), model_dt.criterion, '=', round(impurity[node], round_digit), \n",
+    "                      'samples =', samples[node], 'value =', round(values[node], round_digit), '*leaf*']\n",
+    "                tree.create_node(' '.join([str(i) for i in node_list]), node, parent = parent_node[node])\n",
+    "            else:\n",
+    "                node_list = ['node #{}'.format(node), feat_names[feat_in_node[node]], '<=', round(threshold[node], round_digit), model_dt.criterion, '=', \n",
+    "                             round(impurity[node], round_digit), 'samples =', samples[node], 'value =', round(values[node], round_digit),]\n",
+    "                tree.create_node(' '.join([str(i) for i in node_list]), node, parent = parent_node[node])\n",
+    "        tree.show()\n",
     "            \n",
     "    def print_nodes(self, feat_names=None):\n",
     "        max_depth = self.model.tree_.max_depth\n",
@@ -116,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,28 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS', 'RAD',\n",
-       "       'TAX', 'PTRATIO', 'B', 'LSTAT'], dtype='<U7')"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['feature_names']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -257,6 +269,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "node #0 RM <= 6.941 mse = 86.8734 samples = 404 value = 22.7965\n",
+      "├── node #1 LSTAT <= 14.4 mse = 40.3212 samples = 337 value = 19.9466\n",
+      "│   ├── node #3 DIS <= 1.3848 mse = 25.6935 samples = 203 value = 23.3246\n",
+      "│   │   ├── node #7 CRIM <= 10.1092 mse = 91.5769 samples = 4 value = 44.475\n",
+      "│   │   │   ├── node #17 mse = 0.0 samples = 3 value = 50.0 *leaf*\n",
+      "│   │   │   └── node #18 mse = -0.0 samples = 1 value = 27.9 *leaf*\n",
+      "│   │   └── node #8 RM <= 6.543 mse = 15.1967 samples = 199 value = 22.8995\n",
+      "│   │       ├── node #10 mse = 12.0305 samples = 43 value = 27.4977 *leaf*\n",
+      "│   │       └── node #9 mse = 8.6351 samples = 156 value = 21.6321 *leaf*\n",
+      "│   └── node #4 CRIM <= 6.9258 mse = 19.0053 samples = 134 value = 14.8291\n",
+      "│       ├── node #11 mse = 10.4013 samples = 76 value = 17.0618 *leaf*\n",
+      "│       └── node #12 mse = 15.1879 samples = 58 value = 11.9034 *leaf*\n",
+      "└── node #2 RM <= 7.437 mse = 74.6839 samples = 67 value = 37.1313\n",
+      "    ├── node #5 LSTAT <= 15.765 mse = 38.3057 samples = 41 value = 32.3634\n",
+      "    │   ├── node #13 mse = 21.5856 samples = 39 value = 33.3 *leaf*\n",
+      "    │   └── node #14 mse = 13.69 samples = 2 value = 14.1 *leaf*\n",
+      "    └── node #6 PTRATIO <= 19.65 mse = 39.671 samples = 26 value = 44.65\n",
+      "        ├── node #15 mse = 19.7272 samples = 25 value = 45.56 *leaf*\n",
+      "        └── node #16 mse = -0.0 samples = 1 value = 21.9 *leaf*\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "rt.print_tree_(round_digit=4, feat_names=data['feature_names'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -265,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
