--- a/GridSearchCV.ipynb
+++ b/GridSearchCV.ipynb
@@ -2,25 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import GridSearchCV, train_test_split\n",
-    "from sklearn.datasets import load_breast_cancer\n",
+    "from sklearn.datasets import load_breast_cancer, load_boston\n",
     "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
     "from sklearn.metrics import f1_score, precision_score, recall_score, accuracy_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'packages.GridSearchCV' from 'C:\\\\Users\\\\ywkim\\\\Github\\\\Paper implementation\\\\packages\\\\GridSearchCV.py'>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import packages.GridSearchCV\n",
+    "import importlib\n",
+    "importlib.reload(packages.GridSearchCV)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "from packages.GridSearchCV import grid_cv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classification"
    ]
   },
   {
@@ -210,6 +239,171 @@
    ],
    "source": [
     "grid1.best_score_ == grid.best_score_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = load_boston()\n",
+    "X = pd.DataFrame(data['data'], columns = data['feature_names'])\n",
+    "y = pd.Series(data['target'], name = 'label')\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_rf = RandomForestRegressor(random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=RandomForestRegressor(random_state=42),\n",
+       "             param_grid={'max_depth': [4, 8, None],\n",
+       "                         'n_estimators': [40, 60, 80]},\n",
+       "             scoring='neg_mean_absolute_error')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = GridSearchCV(model_rf, param_grid={'n_estimators':[40,60,80], 'max_depth':[4,8,None]}, cv=5, scoring='neg_mean_absolute_error')\n",
+    "grid.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_depth': None, 'n_estimators': 80}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.4308432484567914"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "grid_cv(estimator=RandomForestRegressor(random_state=42),\n",
+       "        param_grid={'n_estimators': [40, 60, 80], 'max_depth': [4, 8, None]},\n",
+       "        cv=5, scoring=mean_absolute_error)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid1 = grid_cv(model_rf, param_grid={'n_estimators':[40,60,80], 'max_depth':[4,8,None]}, cv=5, scoring='mean_absolute_error')\n",
+    "grid1.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'n_estimators': 80, 'max_depth': None}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid1.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.4308432484567914"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid1.best_score_"
    ]
   },
   {
