--- a/Paper implementation_SMOTE_with_pca_visualization.ipynb
+++ b/Paper implementation_SMOTE_with_pca_visualization.ipynb
@@ -75,6 +75,13 @@
     "        result = dist.argsort()[:self.k_neighbors+1]\n",
     "        return result[result!=idx]\n",
     "    \n",
+    "    def _get_nearest(self, array, idx):\n",
+    "        from sklearn.neighbors import BallTree\n",
+    "        tree = BallTree(array, leaf_size=2)\n",
+    "        _, ind = tree.query(array[idx:idx+1], k = self.k_neighbors+1)\n",
+    "        return ind.flatten()[1:]\n",
+    "        \n",
+    "    \n",
     "    # Generate the synthetic samples for each minority class sample and stack them\n",
     "    def _populate(self, n, i, nnarr, ):\n",
     "        np.random.seed(self.random_state + i)\n",
