refactor: Add random generator

--- a/Paper implementation_SMOTE_with_pca_visualization.ipynb
+++ b/Paper implementation_SMOTE_with_pca_visualization.ipynb
@@ -84,9 +84,9 @@
     "    \n",
     "    # Generate the synthetic samples for each minority class sample and stack them\n",
     "    def _populate(self, n, i, nnarr, ):\n",
-    "        np.random.seed(self.random_state + i)\n",
-    "        nn = np.random.randint(0, self.k_neighbors, n)\n",
-    "        Gap = np.random.random(n)\n",
+    "        rng = np.random.default_rng(self.random_state + i)\n",
+    "        nn = rng.integers(0, self.k_neighbors, n)\n",
+    "        Gap = rng.random(n)\n",
     "        for e in range(n):\n",
     "            dif = self.sample[nnarr[nn[e]], :] - self.sample[i, :]\n",
     "            gap = np.tile(Gap[e], self.numattrs)\n",
