refactor: Add random seed for returning resampled dataset

--- a/Paper implementation_SMOTE_with_pca_visualization.ipynb
+++ b/Paper implementation_SMOTE_with_pca_visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[87 44 38 56 83]\n",
+      "[0.25424955 0.58878127 0.35912332 0.75637362 0.54305886]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rng = np.random.default_rng(33)\n",
+    "nn = rng.integers(0, 100, 5)\n",
+    "print(nn)\n",
+    "print(rng.random(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.44364224, 0.56849119, 0.90810377, 0.25424955, 0.58878127,\n",
+       "       0.35912332, 0.75637362, 0.54305886, 0.20208446, 0.51610529])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rng = np.random.default_rng(33)\n",
+    "rng.random(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +127,7 @@
     "    \n",
     "    # Generate the synthetic samples for each minority class sample and stack them\n",
     "    def _populate(self, n, i, nnarr, ):\n",
-    "        rng = np.random.default_rng(self.random_state + i)\n",
+    "        rng =np.random.default_rng(self.random_state + i)\n",
     "        nn = rng.integers(0, self.k_neighbors, n)\n",
     "        Gap = rng.random(n)\n",
     "        for e in range(n):\n",
@@ -140,6 +183,7 @@
     "    def resample(self, X, y):\n",
     "        try:\n",
     "            resample = np.hstack((np.vstack((X, self.synthetic)), np.append(y, self.synthetic_y).reshape(-1, 1) ))\n",
+    "            rng = np.random.default_rng(sle)\n",
     "            np.random.shuffle(resample)\n",
     "            return resample[:, :-1], resample[:, -1]\n",
     "        # Raise AttributeError if dataset were not fitted. \n",
@@ -148,7 +192,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2],\n",
+       "       [12, 13, 14],\n",
+       "       [ 3,  4,  5],\n",
+       "       [ 9, 10, 11],\n",
+       "       [ 6,  7,  8]])"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(15).reshape(-1, 3)\n",
+    "rng = np.random.default_rng(33)\n",
+    "# np.random.seed(1)\n",
+    "rng.shuffle(a)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +329,7 @@
       "Precision score: 0.8695652173913043\n",
       "Recall score: 0.8\n",
       "F1 score: 0.8333333333333333\n",
-      "AUC: 0.9629714285714286\n"
+      "AUC: 0.9027428571428571\n"
      ]
     }
    ],
@@ -268,6 +347,43 @@
     "print('Recall score:', recall_score(y_test, pred_rf))\n",
     "print('F1 score:', f1_score(y_test, pred_rf))\n",
     "print('AUC:', roc_auc_score(y_test, model_rf.predict_proba(X_test)[:, 1] ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sm = smote(k_neighbors=5, random_state=42)\n",
+    "sm.fit(X_train, y_train)\n",
+    "X_samp, y_samp = sm.resample(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.68607663,  0.37607013, -0.21730426,  0.24958079],\n",
+       "       [ 1.64971226, -0.18456735, -1.12069931,  0.27937114],\n",
+       "       [-1.30581378,  1.45739472, -2.1068235 ,  1.38129681],\n",
+       "       ...,\n",
+       "       [-2.50941895,  0.63542189,  0.89495432,  0.00845564],\n",
+       "       [-2.99109404,  0.70965482,  1.17572266, -0.04825334],\n",
+       "       [-2.98046626,  0.48635183,  1.67562282, -0.31788006]])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_samp"
    ]
   },
   {
