--- a/Paper implementation_SMOTE_with_pca_visualization.ipynb
+++ b/Paper implementation_SMOTE_with_pca_visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,11 +39,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from imblearn.over_sampling import SMOTE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def balance(seq):\n",
+    "    n = len(seq)\n",
+    "    classes, counts = np.unique(seq, return_counts=True)\n",
+    "    k = len(classes)\n",
+    "    H = -sum([ (count/n) * np.log((count/n)) for count in counts])\n",
+    "    return H/np.log(k)\n",
+    "\n",
+    "# https://stats.stackexchange.com/a/239982"
    ]
   },
   {
@@ -55,50 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[87 44 38 56 83]\n",
-      "[0.25424955 0.58878127 0.35912332 0.75637362 0.54305886]\n"
-     ]
-    }
-   ],
-   "source": [
-    "rng = np.random.default_rng(33)\n",
-    "nn = rng.integers(0, 100, 5)\n",
-    "print(nn)\n",
-    "print(rng.random(5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.44364224, 0.56849119, 0.90810377, 0.25424955, 0.58878127,\n",
-       "       0.35912332, 0.75637362, 0.54305886, 0.20208446, 0.51610529])"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rng = np.random.default_rng(33)\n",
-    "rng.random(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,8 +156,8 @@
     "    def resample(self, X, y):\n",
     "        try:\n",
     "            resample = np.hstack((np.vstack((X, self.synthetic)), np.append(y, self.synthetic_y).reshape(-1, 1) ))\n",
-    "            rng = np.random.default_rng(sle)\n",
-    "            np.random.shuffle(resample)\n",
+    "            rng = np.random.default_rng(self.random_state)\n",
+    "            rng.shuffle(resample)\n",
     "            return resample[:, :-1], resample[:, -1]\n",
     "        # Raise AttributeError if dataset were not fitted. \n",
     "        except: raise AttributeError('Please fit first.') from None"
@@ -192,42 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0,  1,  2],\n",
-       "       [12, 13, 14],\n",
-       "       [ 3,  4,  5],\n",
-       "       [ 9, 10, 11],\n",
-       "       [ 6,  7,  8]])"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = np.arange(15).reshape(-1, 3)\n",
-    "rng = np.random.default_rng(33)\n",
-    "# np.random.seed(1)\n",
-    "rng.shuffle(a)\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +175,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4815485438118001"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "balance(data[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 1]), array([896, 104], dtype=int64))"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(data[1], return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -318,18 +296,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.96\n",
-      "Precision score: 0.8695652173913043\n",
+      "Accuracy: 0.955\n",
+      "Precision score: 0.8333333333333334\n",
       "Recall score: 0.8\n",
-      "F1 score: 0.8333333333333333\n",
-      "AUC: 0.9027428571428571\n"
+      "F1 score: 0.816326530612245\n",
+      "AUC: 0.9177142857142857\n"
      ]
     }
    ],
@@ -347,43 +325,6 @@
     "print('Recall score:', recall_score(y_test, pred_rf))\n",
     "print('F1 score:', f1_score(y_test, pred_rf))\n",
     "print('AUC:', roc_auc_score(y_test, model_rf.predict_proba(X_test)[:, 1] ))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sm = smote(k_neighbors=5, random_state=42)\n",
-    "sm.fit(X_train, y_train)\n",
-    "X_samp, y_samp = sm.resample(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.68607663,  0.37607013, -0.21730426,  0.24958079],\n",
-       "       [ 1.64971226, -0.18456735, -1.12069931,  0.27937114],\n",
-       "       [-1.30581378,  1.45739472, -2.1068235 ,  1.38129681],\n",
-       "       ...,\n",
-       "       [-2.50941895,  0.63542189,  0.89495432,  0.00845564],\n",
-       "       [-2.99109404,  0.70965482,  1.17572266, -0.04825334],\n",
-       "       [-2.98046626,  0.48635183,  1.67562282, -0.31788006]])"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_samp"
    ]
   },
   {
