--- a/Paper implementation_SMOTE_with_pca_visualization.ipynb
+++ b/Paper implementation_SMOTE_with_pca_visualization.ipynb
@@ -71,52 +71,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.neighbors import BallTree\n",
+    "\n",
     "class smote:\n",
     "    def __init__(self, k_neighbors=5, random_state=None):\n",
     "        self.k_neighbors = k_neighbors\n",
     "        self.random_state = random_state\n",
     "    \n",
     "    # Get the indices of the k(=k_neighbors) nearest neighbors of the idx-th row in the given array\n",
-    "    def _get_nearest_(self, array, idx, ):\n",
-    "        dist = []\n",
-    "        for row in range(array.shape[0]):\n",
-    "            # L2 distance between two samples\n",
-    "            norm = np.linalg.norm( array[idx] - array[row] )\n",
-    "            dist.append(norm)\n",
-    "        dist = np.array(dist)\n",
-    "        result = dist.argsort()[:self.k_neighbors+1]\n",
-    "        return result[result!=idx]\n",
-    "    \n",
     "    def _get_nearest(self, array, idx):\n",
-    "        from sklearn.neighbors import BallTree\n",
     "        tree = BallTree(array, leaf_size=2)\n",
     "        _, indices = tree.query(array[idx:idx+1], k = self.k_neighbors+1)\n",
     "        return indices.flatten()[1:]\n",
     "        \n",
-    "    \n",
     "    # Generate the synthetic samples for each minority class sample and stack them\n",
     "    def _populate(self, n, i, nnarr, ):\n",
-    "        rng =np.random.default_rng(self.random_state + i)\n",
+    "        rng = np.random.default_rng(self.random_state + i)\n",
     "        nn = rng.integers(0, self.k_neighbors, n)\n",
     "        Gap = rng.random(n)\n",
     "        for e in range(n):\n",
     "            dif = self.sample[nnarr[nn[e]], :] - self.sample[i, :]\n",
     "            gap = np.tile(Gap[e], self.numattrs)\n",
     "            self.synthetic = np.vstack((self.synthetic, self.sample[i, :] + dif * gap))\n",
-    "            \n",
-    "        # Based on the origin pseudocode of paper\n",
-    "        '''while n!=0:\n",
-    "            nn = np.random.randint(1, self.k_neighbors)\n",
-    "            \n",
-    "            dif = self.sample[nnarr[nn], :] - self.sample[i, :]\n",
-    "            gap = np.tile(np.random.random(1)[0], self.numattrs)\n",
-    "            self.synthetic = np.vstack((self.synthetic, self.sample[i, :] + dif * gap))\n",
-    "            n -= 1'''\n",
     "    \n",
+    "    def _populate_last(self, n, i, nnarr, ):\n",
+    "        rng = np.random.default_rng(self.random_state + i)\n",
+    "        nn = rng.integers(0, self.k_neighbors, n)\n",
+    "        Gap = rng.random(n)\n",
+    "        for e in range(n):\n",
+    "            dif = self.sample[nnarr[nn[e]], :] - self.sample[i%self.sample.shape[0], :]\n",
+    "            gap = np.tile(Gap[e], self.numattrs)\n",
+    "            self.synthetic = np.vstack((self.synthetic, self.sample[i%self.sample.shape[0], :] + dif * gap))\n",
+    "            \n",
     "    # Fit the SMOTE instance with an imbalanced dataset\n",
     "    def fit(self, X, y, return_synthetic = False):\n",
     "        y = y.flatten()\n",
@@ -131,13 +121,17 @@
     "        # synthetic: an empty array in which the generated synthetic samples will be stacked\n",
     "        \n",
     "        self.sample = X[np.where(y==cls_minor)[0]]\n",
-    "        self.N = int(num_major / num_minor) - 1\n",
+    "        self.N = (num_major // num_minor) - 1\n",
     "        self.numattrs = X.shape[1]\n",
     "        self.synthetic = np.array([]).reshape(-1, self.numattrs)\n",
     "        \n",
-    "        for ind in range(self.sample.shape[0]):\n",
-    "            nnarray = self._get_nearest(array = self.sample, idx= ind)\n",
-    "            self._populate(self.N, ind, nnarray)\n",
+    "        for ind in range(self.sample.shape[0]+1):\n",
+    "            if ind==self.sample.shape[0]:\n",
+    "                nnarray = self._get_nearest(array = self.sample, idx = 0)\n",
+    "                self._populate_last(num_major- num_minor - self.synthetic.shape[0], ind, nnarray)\n",
+    "            else:\n",
+    "                nnarray = self._get_nearest(array = self.sample, idx= ind)\n",
+    "                self._populate(self.N, ind, nnarray)\n",
     "        \n",
     "        self.synthetic_y = np.tile(cls_minor, self.synthetic.shape[0])\n",
     "        \n",
@@ -235,7 +229,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_rf = RandomForestClassifier(n_estimators=100,random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +254,6 @@
     }
    ],
    "source": [
-    "model_rf = RandomForestClassifier(n_estimators=100,random_state=42)\n",
     "model_rf.fit(X_train, y_train)\n",
     "pred_rf = model_rf.predict(X_test)\n",
     "\n",
@@ -264,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -282,8 +284,6 @@
    "source": [
     "X_samp, y_samp = SMOTE(k_neighbors=3, random_state=42).fit_resample(X_train, y_train)\n",
     "\n",
-    "\n",
-    "model_rf = RandomForestClassifier(n_estimators=100,random_state=42)\n",
     "model_rf.fit(X_samp, y_samp)\n",
     "pred_rf = model_rf.predict(X_test)\n",
     "\n",
@@ -296,18 +296,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Re-sampled data: {'# of class 0': 721, '# of class 1': 721}\n",
       "Accuracy: 0.965\n",
       "Precision score: 0.9090909090909091\n",
       "Recall score: 0.8\n",
       "F1 score: 0.8510638297872342\n",
-      "AUC: 0.9638857142857142\n"
+      "AUC: 0.9704\n"
      ]
     }
    ],
@@ -315,11 +316,12 @@
     "sm = smote(k_neighbors=3, random_state=42)\n",
     "sm.fit(X_train, y_train)\n",
     "X_samp, y_samp = sm.resample(X_train, y_train)\n",
+    "classes, counts = np.unique(y_samp, return_counts=True)\n",
     "\n",
-    "model_rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "model_rf.fit(X_samp, y_samp)\n",
     "pred_rf = model_rf.predict(X_test)\n",
     "\n",
+    "print('Re-sampled data:', dict(zip(['# of class {}'.format(int(i)) for i in classes], counts)))\n",
     "print('Accuracy:', model_rf.score(X_test, y_test))\n",
     "print('Precision score:', precision_score(y_test, pred_rf))\n",
     "print('Recall score:', recall_score(y_test, pred_rf))\n",
